--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/vue-fontawesome": "^3.0.6",
     "bootstrap": "^5.3.2",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
